Styling initial Header and Footer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,7 @@
       content="Find the best products for the cheapest prices"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>eCommerce Project</title>
   </head>
   <body>
